src/test/deca/context/valid/random-bool.deca
// Description : 
//	 test 1 des booleans 
// Resultats :
//
//
// Historique:
//    cree le 08/01/2022
{
    boolean t = true;
    boolean f = ! t;
    t = (t == f);
}